Fix mini avatar for Safari on iOS

--- a/sass/views/_archive.scss
+++ b/sass/views/_archive.scss
@@ -5,6 +5,8 @@
   img {
     // stylelint-disable-next-line
     border-radius: 50% !important;
+    width: 42px;
+    height: 42px;
   }
 }
 
